manifests/uptime-kuma/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 80
      targetPort: 3001
      name: http
