manifests/uptime-kuma/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-crowdsec-bouncer@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - uptime.jmarcelocarvalho.com
      secretName: uptime-kuma-tls
  rules:
    - host: uptime.jmarcelocarvalho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 80
